--- a/libLassebq/libLassebq.vcxproj
+++ b/libLassebq/libLassebq.vcxproj
@@ -279,6 +279,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="lua54.dll" />
+    <None Include="test.lua" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="libLassebq.rc" />
